first 1.21 remove shadow